objects/Key_Task_to_G_A__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Key_Tasks_to_G_A</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blocked_or_On_Hold_Controllers__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Blocked or On Hold Controllers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blocked_or_On_Hold_Dependents__c</fullName>
        <label>Blocked or On Hold Dependents</label>
        <summarizedField>Key_Task_Dependency__c.Dependent_is_Blocked_or_On_Hold__c</summarizedField>
        <summaryForeignKey>Key_Task_Dependency__c.Controlling_Key_Task_to_G_A__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>(5 * ( FLOOR( ( Finish_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Finish_Date__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Start_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Start_Date__c - DATE( 1900, 1, 8), 7 ) ) )
+
1</formula>
        <inlineHelpText>Number of Week Days</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finish_Date__c</fullName>
        <label>Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key_Task_Description__c</fullName>
        <label>Key Task Description</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LTTR_Finish__c</fullName>
        <formula>(5 * ( FLOOR( ( Finish_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Finish_Date__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Team_Release_Plan__r.Release_Plan__r.Planned_G_A_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Team_Release_Plan__r.Release_Plan__r.Planned_G_A_Date__c - DATE( 1900, 1, 8), 7 ) ) )</formula>
        <inlineHelpText>LTTR = Lead Time To Release.  Calculated in Week Days.  Negative Number is BEFORE Release; Positive Number is AFTER Release</inlineHelpText>
        <label>LTTR - Finish</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTTR_Start__c</fullName>
        <formula>(5 * ( FLOOR( ( Start_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Start_Date__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Team_Release_Plan__r.Release_Plan__r.Planned_G_A_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Team_Release_Plan__r.Release_Plan__r.Planned_G_A_Date__c - DATE( 1900, 1, 8), 7 ) ) )</formula>
        <inlineHelpText>LTTR = Lead Time To Release.  Calculated in Week Days.  Negative Number is BEFORE Release; Positive Number is AFTER Release</inlineHelpText>
        <label>LTTR - Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Release_Planning_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Release_Plan__c</fullName>
        <label>Team - Release Plan</label>
        <referenceTo>Team_Release_Plan__c</referenceTo>
        <relationshipLabel>Key Tasks to G.A.</relationshipLabel>
        <relationshipName>Key_Tasks_to_G_A</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Key Task to G.A.</label>
    <nameField>
        <label>Team - Key Task to G.A. Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Tasks to G.A.</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Start_Date_before_Finish_Date</fullName>
        <active>true</active>
        <description>Start Date must always be before or equal to Finish Date</description>
        <errorConditionFormula>Finish_Date__c  &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>Finish_Date__c</errorDisplayField>
        <errorMessage>Start Date must always be before or equal to Finish Date</errorMessage>
    </validationRules>
</CustomObject>